--- a/404.html
+++ b/404.html
@@ -14,12 +14,12 @@
 <img src="https://kasar.store/Kasaricon.png">
 <h1>404</h1>
 <p>Not Found</p>
-<a href="https://kasar.store">Return</a>
+<a href="https://tolazz.github.io/FrogModIos/">Return</a>
 </div>
 </center>
 <div class="nav">	
-<a href="https://kasar.store/Sections" class="tab">rectangle_stack_fill</a>
-<a href="https://kasar.store" class="tab">house_fill</a>
-<a href="https://kasar.store/Search" class="tab">search_fill</a>
+<a href="https://tolazz.github.io/FrogModIos/Sections" class="tab">rectangle_stack_fill</a>
+<a href="https://tolazz.github.io/FrogModIos/" class="tab">house_fill</a>
+<a href="https://tolazz.github.io/FrogModIos/Search" class="tab">search_fill</a>
 </div>
 </html>
