--- a/404.html
+++ b/404.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <title>404</title>
-<link rel="stylesheet" href="https://kasar.store/main.css">
+<link rel="stylesheet" href="https://tolazz.github.io/FrogModIos/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
-<link rel="manifest" href="https://kasar.store/manifest.json">
-<link rel='icon' href='https://kasar.store/Kasaricon.png' type='image/x-icon'/ >
-<link rel="apple-touch-icon" href="https://kasar.store/Kasaricon.png"/>
+<link rel="manifest" href="https://tolazz.github.io/FrogModIos/manifest.json">
+<link rel='icon' href='https://tolazz.github.io/FrogModIos/Kasaricon.png' type='image/x-icon'/ >
+<link rel="apple-touch-icon" href="https://tolazz.github.io/FrogModIos/Kasaricon.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <center>
 <div class="card-devs">
-<img src="https://kasar.store/Kasaricon.png">
+<img src="https://tolazz.github.io/FrogModIos/Kasaricon.png">
 <h1>404</h1>
 <p>Not Found</p>
 <a href="https://tolazz.github.io/FrogModIos/">Return</a>
