--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>	
 <html>
 <head>
-<title>Kasar</title>
+<title>Frog Mod Ios</title>
 <link rel="stylesheet" href="main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
-<meta name="description" content="Kasar AppStore Get Apps Without Computer Or Jailbreak">
+<meta name="description" content="Frog Mod Ios AppStore Get Apps Without Computer Or Jailbreak">
 <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
 <link rel="apple-touch-icon" href="favicon.ico"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <div class="top">
-<img src="https://kasar.store/Kasaricon.png">
-<h1>Kasar</h1>
+<img src="https://tolazz.github.io/FrogModIos/Kasaricon.png">
+<h1>Frog Mod Ios</h1>
 </div>
 <br>
 <br>
@@ -21,9 +21,9 @@
 <center>
 <div class="card-devs">
 <img src="Kasaricon.png">
-<h1>Kasar Khatari</h1>
-<p>Website Developer</p>
-<a href="https://twitter.com/kasarstore">Follow</a>
+<h1>Frog Mod Ios</h1>
+<p>Telegram Group</p>
+<a href="https://t.me/LeangMOD">Join</a>
 </div>
 </center>
 <br>
