--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="card-devs">
 <img src="Kasaricon.png">
 <h1>Frog Mod Ios</h1>
-<p>Telegram Group</p>
+<p>Telegram Group :</p>
 <a href="https://t.me/LeangMOD">Join</a>
 </div>
 </center>
